Refactor code & CSS

--- a/templates/page_sector/master_plan_kpi.html
+++ b/templates/page_sector/master_plan_kpi.html
@@ -8,32 +8,36 @@
 {% block body_tabs %}{% tabs_for_master_plan page user master_plan %}{% endblock %}
 
 {% block body_content %}
-<div class="master_plan_overview_page">
+<div class="master_plan_kpi_page">
 	<div class="kpi">
-		<table border="1" width="100%">
-			<th rowspan="2" class="center">กิจกรรมที่แผนงานต้องดำเนินการ</th>
+		<table class="ss_table">
+			<th rowspan="2" class="center">แผนงาน</th>
 			{% generate_quarter_table_header quarter_year %}
 			<tr>
 				{% for i in 4|get_range %}
-				<td>คาดการณ์</td>
-				<td>ผลที่เกิด</td>
+					<th>คาดการณ์</th>
+					<th>ผลที่เกิด</th>
 				{% endfor %}
 			</tr>
 			{% for plan in master_plan.plan_set.all %}
 				<tr>
+					<td class="plan" colspan="9">
+							กลุ่มแผนงาน: ({{ plan.ref_no }}) {{ plan.name }}
+					</td>
+				</tr>
+				<tr>
 					<td>
 						<ul>
-							<li class="plan">{{ plan.name }} ({{ plan.ref_no }})</li>
 							{% for program in plan.program_set.all %}
-								<li class="program"><a href="{% url view_program_overview program.id %}">{{ program.name }}</a> {% print_program_kpis program %}</li>
+								<li><a href="{% url view_program_kpi program.id %}" title="{{ program.name }}">แผนงานเลขที่ {{ program.ref_no }}</a> {% print_program_kpis program %}</li>
 							{% endfor %}
 						</ul>
 					</td>
 					{% for quarter_no in 4|get_range %}
-						<td>
+						<td class="target_kpi">
 							{% print_master_plan_quarter_kpi 'target' plan quarter_year quarter_no %}
 						</td>
-						<td>
+						<td class="result_kpi">
 							{% print_master_plan_quarter_kpi 'result' plan quarter_year quarter_no %}
 						</td>
 					{% endfor %}
