--- a/templates/page_program/project_activities.html
+++ b/templates/page_program/project_activities.html
@@ -13,7 +13,7 @@
     <div class="ss_control_panel">
         <ul>
         	{% access user 'program activity add' project.program %}<li><img src="{{MEDIA_URL}}/images/toolbar/create.png" class="icon"/><a href="{% url view_project_add_activity project.id %}">เพิ่มกิจกรรม</a></li>{% endaccess %}
-			<li><img src="{{MEDIA_URL}}/images/toolbar/calendar.png" class="icon"/><a href="#">ปฏิทินกิจกรรม</a></li>
+			<li><img src="{{MEDIA_URL}}/images/toolbar/calendar.png" class="icon"/><a href="{% url view_project_calendar project.id %}">ปฏิทินกิจกรรม</a></li>
         </ul>
     </div>
     
