--- a/media/css/styles.global.css
+++ b/media/css/styles.global.css
@@ -44,6 +44,10 @@ a:hover {color:#FFF;background-color:#369;}
 #body-tabs li img {vertical-align:middle;margin-right:8px;}
 
 #body-content {padding:15px;}
+#body-content .help_content {margin-bottom:15px;border:1px solid #CCC;background-color:#FFD;padding:10px;color:#333;}
+#body-content .help_content .title {font-size:116%;font-weight:bold;}
+#body-content .help_content p {margin:8px 0px;color:#333;}
+#body-content .help_content em {font-weight:bold;}
 
 .ss_page_error_message {font-size:131%;color:#333;text-align:center;margin:30px 0px;}
 .ss_page_error_message img {margin-bottom:10px;}
